--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aztec/bb.js": "^0.82.2",
+    "@noir-lang/noir_js": "^1.0.0-beta.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@vladmandic/face-api": "^1.7.15",
     "react": "^19.0.0",
